# etlcore

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements-dev.txt  requirements.txt  test.py
.devcontainer/: devcontainer.json
Blocks/: KeyVault.py
etl-core/Blocks/: Email.py
etlcore/: __init__.py
etlcore/BlobStorage/: BlobStorage.py
etlcore/Blocks/: Email.py  KeyVault.py
etlcore/CX/: CX.py
etlcore/CX_DataExport/: CX_DataExport.py
etlcore/DB/: DB.py
etlcore/DataUtils/: DataUtils.py
etlcore/S3/: S3.py
etlcore/SFTP/: SFTP.py
etlcore/Sharepoint/: Sharepoint.py
