[project]
name = "ETLCore"
authors = [
    {name = "Business Solutions", email = "solutions@caredesignny.org"},
]
description = "Core libraries to run our ETL processes"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["etl", "prefect"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "prefect==2.14.16",
    "azure.keyvault",
    "azure.identity",
    "pydantic",
    "requests",
    "boto3",
    "anyio==3.7.1",
    "griffe==0.49.0"
]
dynamic = ["version"]