[project]
name = "ETLCore"
authors = [
    {name = "Business Solutions", email = "solutions@caredesignny.org"},
]
description = "Core libraries to run our ETL processes"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["etl", "prefect"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
"azure-common==1.1.28",
"azure-core==1.26.3",
"azure-identity==1.16.1",
"azure-keyvault==4.2.0",
"azure-keyvault-certificates==4.6.0",
"azure-keyvault-keys==4.7.0",
"azure-keyvault-secrets==4.6.0",
"azure-storage-blob==12.16.0",
"lxml==4.9.1",
"boto3==1.26.136",
"pandas==2.0.1",
"prefect==2.14.16",
"pyodbc==4.0.39",
"paramiko==3.3.1",
"Office365-REST-Python-Client",
"office365",
"anyio==3.7.1",
"griffe==0.49.0",
"beautifulsoup4==4.12.2",
"aiosqlite==0.20.0",
"alembic==1.13.2",
"apprise==1.8.1",
"asgi-lifespan==2.1.0",
"asyncpg==0.29.0",
"cachetools==5.4.0",
"click==8.1.7",
"cloudpickle==3.0.0",
"croniter==2.0.7",
"cryptography==43.0.0",
"dateparser==1.2.0",
"docker==6.1.3",
"fsspec==2024.6.1",
"graphviz==0.20.3",
"httpcore==1.0.5",
"httpx==0.27.0",
"Jinja2==3.1.4",
"jsonpatch==1.33",
"jsonschema==4.23.0",
"kubernetes==29.0.0",
"orjson==3.10.7",
"packaging==24.1",
"pathspec==0.12.1",
"pendulum==2.1.2",
"pydantic==2.8.2",
"python-dateutil==2.9.0.post0",
"python-slugify==8.0.4",
"pytz==2023.4",
"PyYAML==6.0.2",
"readchar==4.2.0",
"rich==13.7.1",
"ruamel.yaml==0.18.6",
"sniffio==1.3.1",
"SQLAlchemy==2.0.32",
"starlette==0.32.0.post1",
"toml==0.10.2",
"typer==0.12.3",
"typing_extensions==4.12.2",
"ujson==5.10.0",
"uvicorn==0.30.6",
"websockets==12.0",
"coolname==2.2.0",
"numpy==1.26.4"
]
dynamic = ["version"]